# metis-rag-demo

./: .env.example  README.md  main.py  pyproject.toml
services/: bedrock_agent.py
